<resources>
    <string name="app_name">安全教育</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="status_addImage">添加图片</string>
    <string name="status_cancelImage">取消图片</string>
    <string name="status_addcamera">拍照</string>
    <string name="status_delcamera">取消拍照</string>
    <string name="action_share">分享</string>
    <string name="share">分享</string>
    <string name="app_home_page">http://202.121.199.198/anquanjiaoyu/Webuser/index.aspx</string>
    <string name="status_send">发送请求</string>
    <string name="hardLoading">努力加载中...</string>
    <string name="menu1">发送求救.</string>
    <string name="menu2">实验签到.</string>
    <string name="menu3">反馈建议</string>
    <string name="lorem_ipsum">123</string>
    <string name="title_activity_order">OrderActivity</string>
    <string name="title_activity_collect">CollectActivity</string>
    <string name="title_activity_error">ErrorActivity</string>
    <string name="title_activity_exam">ExamActivity</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="title_activity_exam_error">ExamErrorActivity</string>
    <string name="title_activity_his_result">HisResultActivity</string>
    <string name="action_logout">更换帐号</string>
    <string name="action_about_app">关于与建议</string>
    <string name="network_error">网络错误，请检查您的网络连接</string>
    <string name="dialog_OK">确定</string>
    <string name="dialog_Cancel">取消</string>
    <string name="dialog_error_title">错误</string>
    <string name="dialog_message_title">提示</string>
    <string name="dialog_message_success">成功</string>
    <string name="dialog_text_wait">请等待</string>
    <string name="login_input_user_name">请输入名字</string>
    <string name="login_input_user_password">请输入密码</string>
    <string name="login_button_login">登录</string>
    <string name="login_button_register">注册</string>
    <string name="login_button_forget_password">忘记用户名或密码？</string>
    <string name="error_login_error">登陆失败，请确认网络和用户名密码后重试</string>
    <string name="error_login_error_ankai">请登录安开网，完善个人信息</string>
    <string name="forget_password_find_password_button">发送邮件</string>
    <string name="forget_password_send_email">已发送邮件</string>
    <string name="forget_password_email_error">邮件发送错误，请确认您的邮件地址</string>
    <string name="register_input_user_password_again">请再次输入密码</string>
    <string name="register_input_user_email">请输入E-mail地址</string>
    <string name="error_register_password_not_equals">两次输入密码不一致，请重新输入</string>
    <string name="error_register_password_null">密码不可为空</string>
    <string name="error_register_user_name_null">用户名不可空</string>
    <string name="error_register_email_address_null">E-mail地址不可空</string>
    <string name="error_register_user_name_repeat">用户名已被注册，请重新填写</string>
    <string name="error_register_email_repeat">邮箱已被注册，请更换邮箱</string>
    <string name="success_register_success">首次登录成功</string>
    <string name="context_menu">Context menu</string>
    <string name="connect">确认！</string>
    <string name="useGoogleLocationServices">更换帐号</string>
    <string name="useGoogleLocationServicesPrompt">确定要登出帐号吗</string>
    <string name="agree">确认登出</string>
    <string name="disagree">取消</string>
    <string name="fragment_one">主页</string>
    <string name="fragment_two">设置</string>
    <string name="fragment_three">答题系统</string>
    <string name="fragment_about">关于我们</string>
    <string name="fragment_share">分享</string>
    <string name="fragment_know">知识库</string>
    <string name="share_app_string">发现一个有趣的APP，你也来下载试试吧</string>
    <string name="number1">I</string>
    <string name="number2">II</string>
    <string name="number3">III</string>
    <string name="fragment">Fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="user_name">未登录</string>
    <string name="user_email"> </string>
    <string name="content_description">image view</string>
    <string name="about_text">实验室安全教育平台</string>
    <string name="about_text2">上大海润</string>
    <string name="about_author">Author: 汪毅</string>
    <string name="about_contact">Contact: shuwangyi@yeah.net</string>
    <string name="about_libraries">Libraries:</string>
    <string name="about_butterknife">ButterKnife by Jake Wharton</string>
    <string name="about_robototextview">RobotoTextView by Evgeny Shishkin</string>
    <string name="about_msg_subject">[NavigationDrawerSI]</string>
    <string name="about_mail_chooser">Send with</string>
    <string name="about_intent_failed">The requested application could not be launched.</string>
    <string-array name="parent_id">
        <item>1023 (音乐学院)  </item>
        <item>1056（上海温哥华电影学院） </item>
        <item>564（理学院）</item >
        <item>565（文学院）</item>
        <item>566（外国语学院）</item>
        <item>567（法学院）</item>
        <item>568（通信与信息工程学院）</item>
        <item>569（计算机工程与科学学院办公室）</item>
        <item>570（机电工程与自动化学院办公室）</item>
        <item>571（材料科学与工程学院）</item>
        <item>572（环境与化学工程学院）</item>
        <item>573（生命科学学院）</item>
        <item>574（美术学院）</item>
        <item>575（影视学院）</item>
        <item>576（悉尼工商学院）</item>
        <item>577（社会科学学院）</item>
        <item>578（土木工程系）</item>
        <item>579（体育学院）</item>
        <item>580（继续教育和巴黎时装学院）</item>
        <item>581（国际交流学院）</item>
        <item>582（高等技术学院）</item>
        <item>583（巴士汽车学院）</item>
        <item>584（房地产学院）</item>
        <item>585（中欧工程技术学院）</item>
        <item>586（行政）</item>
        <item>587（钱伟长学院）</item>
        <item>588（管理学院）</item>
        <item>589（社区学院）</item>
        <item>590（图书情报档案系）</item>
        <item>591（经济学院）</item>
        <item>592（社会发展研究院办公室等）</item>
        <item>593（科技发展研究院等）</item>
        <item>594（社会学系等）</item>
        <item>595（纳米科学与技术研究中心等）</item>
        <item>596（研究生院等）</item>
    </string-array>
    <string-array name="lab_level">
        <item>842000 (无)</item>
        <item>842001 实验教学示范中心(国家级)</item>
        <item>842002 实验教学示范中心(上海市级)</item >
        <item>842003 省市级重点实验室</item>
    </string-array>
    <string-array name="lab_type">
        <item>843000 未知 </item>
        <item>843001 基础实验室 </item>
        <item>843002 专业实验室</item >
        <item>843003 多媒体教学实验室</item>
    </string-array>
    <string name="recyclerview_fab_example">RecyclerView FAB example</string>
    <string name="floating_action_menu">Floating Action Menu</string>
    <string name="lorem_ipsum_large">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed ultricies risus. Integer nisi orci, lacinia sit amet mi in, mollis scelerisque purus. Nunc risus ligula, maximus eu orci a, facilisis dictum velit. Proin nec laoreet magna. Nulla ut sagittis lorem. Morbi id enim fermentum, semper diam et, tempus leo. Aliquam vel congue orci. Suspendisse potenti. Curabitur finibus diam augue, vel bibendum sapien ultrices non.</string>
    <string name="title_activity_list">TextDrawable Sample</string>
    <string name="title_activity_check_box">TextDrawable Sample</string>
    <string name="titlebar">Samples</string>
    <string name="github_link">GITHUB.COM/BLUEJAMESBOND/TEXTJUSTIFY-ANDROID</string>
    <string name="debug_button">TOGGLE DEBUG</string>
    <string name="cache_button">CHANGE CACHE</string>
<string name="soshelp00">如果遇到触电情况，要沉着冷静、迅速果断地采取应急措施。针对不同的伤情，采取相应的急救方法，争分夺秒地抢救，直到医护人员到来。触电急救的要点是动作迅速，救护得法。发现有人触电，首先要使触电者尽快脱离电源，然后根据具体情况，进行相应的救治。
1.脱离电源
(1)如开关箱在附近，可立即拉下闸刀或拔掉插头，断开电源。
(2)如距离闸刀较远，应迅速用绝缘良好的电工钳或有干燥木柄的利器(刀、斧、锹等)砍断电线，或用干燥的木棒、竹竿、硬塑料管等物迅速将电线拨离触电者。
(3)若现场无任何合适的绝缘物可利用，救护人员亦可用几层干燥的衣服将手包裹好，站在干燥的木板上，拉触电者的衣服，使其脱离电源。
(4)对高压触电，应立即通知有关部门停电，或迅速拉下开关，或由有经验的人采取特殊措施切断电源。雷电放电具有电流大，电压高的特点。
2.对症救治
    对于触电者，可按以下三种情况分别处理：
(1)对触电后神志清醒者，要有专人照顾、观察，情况稳定后，方可正常活动；对轻度昏迷或呼吸微弱者，可针刺或掐人中、十宣、涌泉等穴位，并送医院救治。
(2)对触电后无呼吸但心脏有跳动者，应立即采用口对口人工呼吸；对有呼吸但心脏停止跳动者，则应立刻进行胸外心脏挤压法进行抢救。
(3)如触电者心跳和呼吸都已停止，则须同时采取人工呼吸和俯卧压背法、仰卧压胸法、心脏挤压法等措施交替进行抢救。
    俯卧压背法 被救者俯卧，头偏向一侧，一臂弯曲垫于头下。救护者两腿分开，跪跨于病人大腿两侧，两臂伸直，两手掌心放在病人背部。拇指靠近脊柱，四指向外紧贴肋骨，以身体重量压迫病人背部，然后身体向后，两手放松，使病人胸部自然扩张，空气进入肺部。按照上述方法重复操作，每分钟16～20次。
    仰卧压胸法 被救者仰卧，背后放上一个枕垫，使胸部突出，两手伸直，头侧向一边。救护者两腿分开，跪跨在病人大腿上部两侧，面对病人头部，两手掌心压放在病人的胸部，大拇指向上，四指伸开，自然压迫病人胸部，肺中的空气被压出。然后把手放松，病人胸部依其弹性自然扩张，空气进入肺内。这样反复进行，每分钟16～20次。
    心脏挤压法 触电者心跳停止时，必须立即用心脏挤压法进行抢救，具体方法如下。
(1)将触电者衣服解开，使其仰卧在地板上，头向后仰，姿势与口对口人工呼吸法相同。
(2)救护者跪跨在触电者的腰部两侧，两手相叠，手掌根部放在触电者心口窝上方，胸骨下1/3处。
(3)掌根用力垂直向下，向脊背方向挤压，对成人应压陷3～4cm，每秒钟挤压1次，每分钟挤压60次为宜。
(4)挤压后，掌根迅速全部放松，让触电者胸部自动复原，每次放松时掌根不必完全离开胸部。
    上述步骤反复操作。如果触电者的呼吸和心跳都停止了，应同时进行口对口人工呼吸和胸外心脏挤压。如果现场仅一人抢救，两种方法应交替进行。每次吹气2～3次，再挤压10～15次。
</string>
<string name="soshelp01">电压常识：
    安全电压：安全电压是为了防止触电事故而采用由特定电源供电的电压系列。根据环境、人员和使用方式。我国规定安全电压是42V、36V、24V、12V和6V5种。常用安全电压是36V、12V。
    高压：凡对地电压在250V及以上的为高压。在交流系统中。1kV、3kV、6kV、10kV、30kV等都属于高压，在直流系统中500V即为高压。
    低压：凡对地电压在250V及以下的为低压。交流系统总的220V、110V和三相四线制的380／220V及220/110V中性点接地系统均为低压。
额定功率与峰值功率：
    额定功率是指电源在稳定、持续工作状态下所能承受的最大负载。比如。电源的额定功率是300W，其含义是每天24小时、每年365天持续工作时。所有负载之和不能超过300W。额定功率代表了一台电源真正的负载能力。
    峰值功率是瞬间或者几分钟能承受的负载，不代表真正的负载能力。现在很多厂商不标明额定功率，只标明峰值功率(有的也说“最大功率”)。实际上是在误导用户。
正确使用插座：
    在电源插座上均标明有额定电压与额定电流，两者乘积即为额定功率。假若在使用多联电源插座时，插了多种电器就应仔细计算下所插电器的总功率是否超过了多联插座允许的额定功率，如果计算所得的总功率比插座的额定功率低。使用就安伞；相反。就不安全。电流通过金属导体时，金属导体会升温，通过导体的电流愈大，热效应愈高，发热量也愈大。当多种电器的电流通过多联插座时，电流愈大，其热效应愈高。超过额定值后就会烧毁电线和插座。严重时就会引起火灾。所以。使用电源插座时切记不要“小马拉大车”。
绝缘与接地：
    绝缘：利用不导电的物质将带电体隔离或包裹起来，防止触电的措施，称为绝缘。绝缘通常分为：气体绝缘、液体绝缘和固体绝缘。
    接地：就是把在正常情况下不带电、在故障情况下可能呈现危险的对地电压的金属部分同大地紧密地连接起来，把设备上的故障电压、限制在安全范围内的安全措施。
漏电保护器和空气开关：
    漏电保护器用于防止因接触而引起的单相触电事故和因电气设备漏电而造成的电气火灾爆炸事故，有的漏电保护器还具有过载保护、过电压和欠电压保护、缺相保护等功能。
    空气开关：也叫断路器，在电路中起接通、分断和承载额定工作电流等作用并能在线路发生过载、短路、欠压的情况下进行可靠地保护。空气开关的动、静触头及触杆设计成平行状，利用短路产生的电动斥力使动、静触头断开，分断能力强，限流特性可靠。
    合理布线：
    在实验室建设中。应注意强弱电线系统的合理布线，柑线、零线、保护接地(零)线应选用不同颜色暗线应穿PVC阻燃管。保护接零线要牢固地接在保护干线上，严禁将单相三孔插座的接地线与零线直接连起来，以防使用中零线开路时造成电器外壳带电伤人。电气线路敷设及电器安装必须符合安全规定。不得乱托、乱接电线，不得使用不合格的保险装置等电器产品，不得超负荷用电。
</string>
</resources>