<cn.edu.shu.ankai.widget.GestureFrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/about_gesture_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    tools:context="cn.edu.shu.ankai.AboutActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:padding="@dimen/text_margin"
        android:orientation="vertical"
        >
        <RelativeLayout
            android:id="@+id/head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:id="@+id/icon"
                android:layout_width="@dimen/about_icon_size"
                android:layout_height="@dimen/about_icon_size"
                android:layout_margin="@dimen/view_margin"
                android:src="@drawable/profile"/>
            <RelativeLayout
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="@dimen/about_icon_size"
                android:layout_margin="@dimen/view_margin"
                android:layout_toRightOf="@+id/icon">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:layout_margin="@dimen/view_margin"
                    android:textSize="@dimen/text_size_title_bigger"/>
                <TextView
                    android:id="@+id/version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="版本：1.0.0"
                    android:layout_alignParentBottom="true"
                    android:layout_margin="@dimen/view_margin"
                    android:textSize="@dimen/text_size_subhead"/>
        </RelativeLayout>
        </RelativeLayout>

        <TextView
            android:id="@+id/title_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/view_margin"
            android:textSize="@dimen/text_size_title"
            android:text="应用介绍："
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/view_margin"
            android:textSize="@dimen/text_size_normal"
            android:text="@string/about_text"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/view_margin"
            android:textSize="@dimen/text_size_normal"
            android:text="@string/about_text2"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:layout_marginLeft="@dimen/view_margin"
            android:layout_marginRight="@dimen/view_margin"
            android:layout_alignTop="@+id/dateTextView"
            android:background="@color/divider_color"
            />
        <TextView
            android:id="@+id/title_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/view_margin"
            android:textSize="@dimen/text_size_title"
            android:text="联系我："
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/view_margin"
            android:textSize="@dimen/text_size_normal"
            android:text="如果您喜欢本应用或有任何意见或建议，可通过 “设置”-“意见反馈”与我进行沟通，或者发送邮件至 shuwangyi@yeah.net,感谢您的支持. "
            android:autoLink="all|web"
            />

    </LinearLayout>
    </ScrollView>
    <include
        layout="@layout/toolbar"/>
</cn.edu.shu.ankai.widget.GestureFrameLayout>
